src/main/java/com/example/stream/quarkus/registry/model/error/PersonSuccess.java
package com.example.stream.quarkus.registry.model.error;

public sealed interface PersonSuccess extends Success permits PersonDeleteOk {
}
